--- a/fastapi/templates/cast-service-deployment.yaml
+++ b/fastapi/templates/cast-service-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: movie-db
-  name: movie-db
+    io.kompose.service: cast-service
+  name: cast-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: movie-db
+      io.kompose.service: cast-service
   strategy:
     type: Recreate
   template:
@@ -22,27 +22,33 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: movie-db
+        io.kompose.service: cast-service
     spec:
       containers:
-      - env:
-        - name: POSTGRES_DB
-          value: movie_db_dev
-        - name: POSTGRES_PASSWORD
-          value: movie_db_password
-        - name: POSTGRES_USER
-          value: movie_db_username
-        image: postgres:12.1-alpine
+      - args:
+        - uvicorn
+        - app.main:app
+        - --reload
+        - --host
+        - 0.0.0.0
+        - --port
+        - "8000"
+        env:
+        - name: DATABASE_URI
+          value: postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev
+        image: cast-service
         imagePullPolicy: ""
-        name: movie-db
+        name: cast-service
+        ports:
+        - containerPort: 8000
         resources: {}
         volumeMounts:
-        - mountPath: /var/lib/postgresql/data/
-          name: postgres-data-movie
+        - mountPath: /app/
+          name: cast-service-claim0
       restartPolicy: Always
       serviceAccountName: ""
       volumes:
-      - name: postgres-data-movie
+      - name: cast-service-claim0
         persistentVolumeClaim:
-          claimName: postgres-data-movie
+          claimName: cast-service-claim0
 status: {}
