--- a/fastapi/templates/nginx-deployment.yaml
+++ b/fastapi/templates/nginx-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: movie-db
-  name: movie-db
+    io.kompose.service: nginx
+  name: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: movie-db
+      io.kompose.service: nginx
   strategy:
     type: Recreate
   template:
@@ -22,27 +22,22 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: movie-db
+        io.kompose.service: nginx
     spec:
       containers:
-      - env:
-        - name: POSTGRES_DB
-          value: movie_db_dev
-        - name: POSTGRES_PASSWORD
-          value: movie_db_password
-        - name: POSTGRES_USER
-          value: movie_db_username
-        image: postgres:12.1-alpine
+      - image: nginx:latest
         imagePullPolicy: ""
-        name: movie-db
+        name: nginx
+        ports:
+        - containerPort: 8080
         resources: {}
         volumeMounts:
-        - mountPath: /var/lib/postgresql/data/
-          name: postgres-data-movie
+        - mountPath: /etc/nginx/conf.d/default.conf
+          name: nginx-claim0
       restartPolicy: Always
       serviceAccountName: ""
       volumes:
-      - name: postgres-data-movie
+      - name: nginx-claim0
         persistentVolumeClaim:
-          claimName: postgres-data-movie
+          claimName: nginx-claim0
 status: {}
