--- a/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
+++ b/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: cast-service-claim0
   name: cast-service-claim0
+  namespace: dev
+  labels:
+    app: cast-service
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
-status: {}
