--- a/fastapi/templates/movie-service-deployment.yaml
+++ b/fastapi/templates/movie-service-deployment.yaml
@@ -1,56 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
-    kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: movie-service
   name: movie-service
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      io.kompose.service: movie-service
+      app: movie-service
   strategy:
     type: Recreate
   template:
     metadata:
-      annotations:
-        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
-        kompose.version: 1.21.0 (992df58d8)
-      creationTimestamp: null
       labels:
-        io.kompose.service: movie-service
+        app: movie-service
     spec:
       containers:
-      - args:
-        - uvicorn
-        - app.main:app
-        - --reload
-        - --host
-        - 0.0.0.0
-        - --port
-        - "8000"
-        env:
-        - name: CAST_SERVICE_HOST_URL
-          value: http://cast_service:8000/api/v1/casts/
-        - name: DATABASE_URI
-          value: postgresql://movie_db_username:movie_db_password@movie_db/movie_db_dev
-        image: movie-service
-        imagePullPolicy: ""
-        name: movie-service
-        ports:
-        - containerPort: 8000
-        resources: {}
-        volumeMounts:
-        - mountPath: /app/
-          name: movie-service-claim0
-      restartPolicy: Always
-      serviceAccountName: ""
+        - name: movie-service
+          image: "{{ .Values.services.movie-service.image.repository }}:{{ .Values.services.movie-service.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.services.movie-service.service.port }}
+          env:
+            {{- range .Values.services.movie-service.env }}
+            - name: {{ .name }}
+              value: {{ .value }}
+            {{- end }}
+          volumeMounts:
+            {{- range .Values.services.movie-service.volumeMounts }}
+            - name: {{ .name }}
+              mountPath: {{ .mountPath }}
+            {{- end }}
       volumes:
-      - name: movie-service-claim0
-        persistentVolumeClaim:
-          claimName: movie-service-claim0
-status: {}
+        {{- range .Values.services.movie-service.volumes }}
+        - name: {{ .name }}
+          persistentVolumeClaim:
+            claimName: {{ .persistentVolumeClaim.claimName }}
+        {{- end }}
