--- a/fastapi/templates/tests/test-connection.yaml
+++ b/fastapi/templates/tests/test-connection.yaml
@@ -1,15 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "fastapi.fullname" . }}-test-connection"
-  labels:
-    {{- include "fastapi.labels" . | nindent 4 }}
-  annotations:
-    "helm.sh/hook": test
+  name: test-connection
 spec:
   containers:
-    - name: wget
+    - name: test-connection
       image: busybox
-      command: ['wget']
-      args: ['{{ include "fastapi.fullname" . }}:{{ .Values.service.port }}']
-  restartPolicy: Never
+      command: ['sh', '-c', 'nc -zv {{ .Values.services.cast-service.service.type }} {{ .Values.services.cast-service.service.port }}']
