--- a/fastapi/values.yaml
+++ b/fastapi/values.yaml
@@ -1,76 +1,78 @@
-# Default values for fastapi.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
+# Général
 replicaCount: 1
 
 image:
   repository: ameliendevops/jenkinsapi
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Automatically mount a ServiceAccount's API credentials?
   automount: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
 podLabels: {}
 
 podSecurityContext: {}
-  # fsGroup: 2000
-
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
-service:
-  type: NodePort
-  port: 80
+# Services spécifiques
+services:
+  cast-service:
+    image:
+      repository: your-repo/cast-service
+      tag: "latest"
+    service:
+      type: NodePort
+      port: 8000
+    volumeMounts:
+      - name: cast-service-claim0
+        mountPath: /app/
+    volumes:
+      - name: cast-service-claim0
+        persistentVolumeClaim:
+          claimName: cast-service-claim0
+    env:
+      - name: DATABASE_URI
+        value: postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev
 
+  movie-service:
+    image:
+      repository: your-repo/movie-service
+      tag: "latest"
+    service:
+      type: NodePort
+      port: 8000
+    volumeMounts:
+      - name: movie-service-claim0
+        mountPath: /app/
+    volumes:
+      - name: movie-service-claim0
+        persistentVolumeClaim:
+          claimName: movie-service-claim0
+    env:
+      - name: CAST_SERVICE_HOST_URL
+        value: http://cast-service:8000/api/v1/casts/
+      - name: DATABASE_URI
+        value: postgresql://movie_db_username:movie_db_password@movie_db/movie_db_dev
+
+# Autres configurations
 ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
 livenessProbe:
   httpGet:
     path: /
@@ -85,23 +87,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
 
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
