--- a/fastapi/templates/tests/test-connection.yaml
+++ b/fastapi/templates/tests/test-connection.yaml
@@ -6,4 +6,4 @@ spec:
   containers:
     - name: test-connection
       image: busybox
-      command: ['sh', '-c', 'nc -zv {{ .Values.services.cast-service.service.type }} {{ .Values.services.cast-service.service.port }}']
+      command: ['sh', '-c', 'nc -zv {{ .Values.services.cast-service.service.type }} {{ .Values.services.cast-service.service.port }} || exit 1']
