--- a/fastapi/templates/movie-service-deployment.yaml
+++ b/fastapi/templates/movie-service-deployment.yaml
@@ -1,9 +1,10 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: movie-service
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{.Values.replicaCount}}
   selector:
     matchLabels:
       app: movie-service
@@ -16,23 +17,24 @@ spec:
     spec:
       containers:
         - name: movie-service
-          image: "{{ .Values.services.movie-service.image.repository }}:{{ .Values.services.movie-service.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{.Values.services.movie-service.image.repository}}:
+		{{.Values.services.movie-service.image.tag}}"
+          imagePullPolicy: {{.Values.image.pullPolicy}}
           ports:
-            - containerPort: {{ .Values.services.movie-service.service.port }}
+            - containerPort: {{.Values.services.movie-service.service.port}}
           env:
-            {{- range .Values.services.movie-service.env }}
-            - name: {{ .name }}
-              value: "{{ .value }}"
-            {{- end }}
+            {{- range.Values.services.movie-service.env}}
+            - name: "{{.name}}"
+            - value: "{{.value}}"
+            {{- end}}
           volumeMounts:
-            {{- range .Values.services.movie-service.volumeMounts }}
-            - name: {{ .name }}
-              mountPath: {{ .mountPath }}
-            {{- end }}
+            {{- range.Values.services.movie-service.volumeMounts}}
+            - name: "{{.name}}"
+            - mountPath: "{{.mountPath}}"
+            {{- end}}
       volumes:
-        {{- range .Values.services.movie-service.volumes }}
-        - name: {{ .name }}
+        {{- range.Values.services.movie-service.volumes}}
+        - name: "{{.name}}"
           persistentVolumeClaim:
-            claimName: {{ .persistentVolumeClaim.claimName }}
-        {{- end }}
+            claimName: "{{.persistentVolumeClaim.claimName}}"
+        {{- end}}
