--- a/fastapi/templates/movie-service-deployment.yaml
+++ b/fastapi/templates/movie-service-deployment.yaml
@@ -17,23 +17,23 @@ spec:
     spec:
       containers:
         - name: movie-service
-          image: "{{.Values.services.movie-service.image.repository}}:
-		{{.Values.services.movie-service.image.tag}}"
+          image: "{{.Values.services.movieservice.image.repository}}:
+		{{.Values.services.movieservice.image.tag}}"
           imagePullPolicy: {{.Values.image.pullPolicy}}
           ports:
-            - containerPort: {{.Values.services.movie-service.service.port}}
+            - containerPort: {{.Values.services.movieservice.service.port}}
           env:
-            {{- range.Values.services.movie-service.env}}
+            {{- range.Values.services.movieservice.env}}
             - name: "{{.name}}"
             - value: "{{.value}}"
             {{- end}}
           volumeMounts:
-            {{- range.Values.services.movie-service.volumeMounts}}
+            {{- range.Values.services.movieservice.volumeMounts}}
             - name: "{{.name}}"
             - mountPath: "{{.mountPath}}"
             {{- end}}
       volumes:
-        {{- range.Values.services.movie-service.volumes}}
+        {{- range.Values.services.movieservice.volumes}}
         - name: "{{.name}}"
           persistentVolumeClaim:
             claimName: "{{.persistentVolumeClaim.claimName}}"
