--- a/fastapi/values.yaml
+++ b/fastapi/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 image:
   repository: ameliendevops/jenkinsapi
   pullPolicy: IfNotPresent
-  tag: ""  # Vérifiez cette valeur, une valeur vide peut poser des problèmes
+  tag: "latest"  # Assurez-vous que la valeur est correcte pour votre contexte
 
 imagePullSecrets: []
 
@@ -38,7 +38,7 @@ services:
           claimName: cast-service-claim0
     env:
       - name: DATABASE_URI
-        value: "postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev"  # Ajout des guillemets
+        value: "postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev"
 
   movie-service:
     image:
@@ -58,7 +58,7 @@ services:
       - name: CAST_SERVICE_HOST_URL
         value: "http://cast-service:8000/api/v1/casts/"
       - name: DATABASE_URI
-        value: "postgresql://movie_db_username:movie_db_password@movie_db/movie_db_dev"  # Ajout des guillemets
+        value: "postgresql://movie_db_username:movie_db_password@movie_db/movie_db_dev"
 
 # Autres configurations
 ingress:
