--- a/fastapi/templates/movie-service-deployment.yaml
+++ b/fastapi/templates/movie-service-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: movie-service
+  name: movieservice
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: movie-service
+      app: movieservice
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: movie-service
+        app: movieservice
     spec:
       containers:
-        - name: movie-service
+        - name: movieservice
           image: "{{ .Values.services.movieservice.image.repository }}:{{ .Values.services.movieservice.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
