--- a/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
+++ b/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cast-service-claim0
+  name: castserviceclaim0
   namespace: dev
   labels:
-    app: cast-service
+    app: castservice
 spec:
   accessModes:
     - ReadWriteOnce
