--- a/fastapi/templates/movie-service-claim0-persistentvolumeclaim.yaml
+++ b/fastapi/templates/movie-service-claim0-persistentvolumeclaim.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: movie-service-claim0
+  name: movieserviceclaim0
   namespace: dev
   labels:
-    app: movie-service
+    app: movieservice
 spec:
   accessModes:
     - ReadWriteOnce
