--- a/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
+++ b/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.services.castservice.persistentVolumeClaim.name }}
+  name: cast-service-claim0
+  namespace: {{ .Namespace }}
   labels:
     app: castservice
 spec:
@@ -9,4 +10,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.services.castservice.persistentVolumeClaim.storage }}
+      storage: 100Mi
