--- a/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
+++ b/fastapi/templates/cast-service-claim0-persistentvolumeclaim.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cast-service-claim0
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: castservice
 spec:
