--- a/fastapi/templates/cast-service-claim-staging.yaml
+++ b/fastapi/templates/cast-service-claim-staging.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cast-service-claim0
-  namespace: {{ .Release.Namespace }}
+  name: cast-service-claim
+  namespace: staging
   labels:
     app: castservice
 spec:
