--- a/fastapi/templates/movie-service-claim-dev.yaml
+++ b/fastapi/templates/movie-service-claim-dev.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: movie-service-claim0
-  namespace: {{ .Release.Namespace }}
+  name: movie-service-claim
+  namespace: dev
   labels:
     app: movieservice
 spec:
