--- a/fastapi/values.yaml
+++ b/fastapi/values.yaml
@@ -26,15 +26,12 @@ services:
       type: NodePort
       port: 8000
     volumeMounts:
-      - name: cast-service-claim0
+      - name: cast-service-claim
         mountPath: /app/
     volumes:
-      - name: cast-service-claim0
+      - name: cast-service-claim
         persistentVolumeClaim:
-          claimName: {{ .Values.services.castservice.persistentVolumeClaim.name }}
-    persistentVolumeClaim:
-      name: cast-service-claim0
-      storage: 100Mi
+          claimName: cast-service-claim  # Nom générique pour les PVCs, adapté pour chaque environnement
     env:
       - name: DATABASE_URI
         value: "postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev"
@@ -47,15 +44,12 @@ services:
       type: NodePort
       port: 8000
     volumeMounts:
-      - name: movie-service-claim0
+      - name: movie-service-claim
         mountPath: /app/
     volumes:
-      - name: movie-service-claim0
+      - name: movie-service-claim
         persistentVolumeClaim:
-          claimName: {{ .Values.services.movieservice.persistentVolumeClaim.name }}
-    persistentVolumeClaim:
-      name: movie-service-claim0
-      storage: 100Mi
+          claimName: movie-service-claim  # Nom générique pour les PVCs, adapté pour chaque environnement
     env:
       - name: CAST_SERVICE_HOST_URL
         value: "http://cast-service:8000/api/v1/casts/"
