--- a/fastapi/templates/cast-service-claim-staging.yaml
+++ b/fastapi/templates/cast-service-claim-staging.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: staging
   labels:
     app: castservice
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: app
+    meta.helm.sh/release-namespace: staging
 spec:
   accessModes:
     - ReadWriteOnce
