--- a/fastapi/templates/movie-service-claim-qa.yaml
+++ b/fastapi/templates/movie-service-claim-qa.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: qa
   labels:
     app: movieservice
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: app
+    meta.helm.sh/release-namespace: qa
 spec:
   accessModes:
     - ReadWriteOnce
