--- a/fastapi/templates/storageclass.yaml
+++ b/fastapi/templates/storageclass.yaml
@@ -3,4 +3,5 @@ kind: StorageClass
 metadata:
   name: local-path
 provisioner: kubernetes.io/no-provisioner
+reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
