--- a/fastapi/templates/storageclass-dev.yaml
+++ b/fastapi/templates/storageclass-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: local-path
+  name: local-path-dev
   labels:
     app.kubernetes.io/managed-by: Helm
   annotations:
