--- a/fastapi/templates/storageclass-prod.yaml
+++ b/fastapi/templates/storageclass-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: local-path-dev
+  name: local-path-prod
   annotations:
     meta.helm.sh/release-name: app
     meta.helm.sh/release-namespace: prod
