--- a/cast-service/Dockerfile
+++ b/cast-service/Dockerfile
@@ -9,14 +9,13 @@ COPY requirements.txt /app/
 RUN apt-get update \
     && apt-get install -y gcc \
     && apt-get clean \
-    && pip install -r requirements.txt \
-    && rm -rf /root/.cache/pip
+    && pip install --no-cache-dir -r requirements.txt
 
 # Copier le reste du code source dans le conteneur
 COPY . /app/
 
-# Changer le répertoire de travail pour que `python` trouve le module correctement
+# Changer le répertoire de travail pour que `uvicorn` trouve le module correctement
 WORKDIR /app/app
 
 # Définir la commande par défaut
-CMD ["python", "main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
