--- a/cast-service/Dockerfile
+++ b/cast-service/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8-slim
 WORKDIR /app
 
 # Copier les fichiers requirements.txt dans le conteneur
-COPY requirements.txt ./
+COPY requirements.txt .
 
 # Installer les dépendances
 RUN apt-get update \
@@ -13,10 +13,10 @@ RUN apt-get update \
     && rm -rf /root/.cache/pip
 
 # Copier le reste du code source dans le conteneur
-COPY ./app ./app
+COPY ./app /app
 
-# Changer le répertoire de travail pour que `python` trouve le module correctement
-WORKDIR /app/app
+# Ajouter le répertoire actuel au PYTHONPATH pour que Python puisse trouver le module
+ENV PYTHONPATH=/app
 
-# Définir la commande par défaut
-CMD ["python", "main.py"]
+# Lancer l'application avec Uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
