--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,22 @@ services:
   movie_service:
     build: ./movie-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    environment:
+      - DATABASE_URI=sqlite:///./movie_service.db  # URI pour SQLite
     volumes:
       - ./movie-service/:/app/
+      - ./movie_service.db:/app/movie_service.db  # Persist le fichier de base de données
     ports:
       - 8001:8000
 
   cast_service:
     build: ./cast-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    environment:
+      - DATABASE_URI=sqlite:///./cast_service.db  # URI pour SQLite
     volumes:
       - ./cast-service/:/app/
+      - ./cast_service.db:/app/cast_service.db  # Persist le fichier de base de données
     ports:
       - 8002:8000
 
