--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./movie-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     environment:
-      - DATABASE_URI=sqlite:///./movie_service.db  # URI pour SQLite
+      - DATABASE_URI=sqlite:////app/movie_service.db  # pour movie_service
     volumes:
       - ./movie-service/:/app/
       - ./movie_service.db:/app/movie_service.db  # Persist le fichier de base de données
@@ -16,7 +16,7 @@ services:
     build: ./cast-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     environment:
-      - DATABASE_URI=sqlite:///./cast_service.db  # URI pour SQLite
+      - DATABASE_URI=sqlite:////app/cast_service.db  # pour cast_service
     volumes:
       - ./cast-service/:/app/
       - ./cast_service.db:/app/cast_service.db  # Persist le fichier de base de données
