--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "your-chart-name.fullname" . }}
+  name: {{ include "fastapi.fullname" . }}  # Utilisez le modèle défini
   labels:
-    app: {{ include "your-chart-name.name" . }}
-    chart: {{ include "your-chart-name.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "fastapi.labels" . | nindent 4 }}
 spec:
-  type: ClusterIP  # Ou NodePort / LoadBalancer selon tes besoins
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
-      targetPort: 8000  # Port du conteneur
-      protocol: TCP
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
   selector:
-    app: {{ include "your-chart-name.name" . }}  # Correspond à l'étiquette du déploiement
+    app.kubernetes.io/name: {{ include "fastapi.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
