--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -15,7 +15,10 @@ service:
 ingress:
   enabled: false
 
-hpa:
-  enabled: false
+autoscaling:
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 80
 
 resources: {}
