--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,7 +13,7 @@ service:
   type: ClusterIP
 
 ingress:
-  enabled: false
+  enabled: true
   name: ""
   path: /
   pathType: ImplementationSpecific
@@ -23,7 +23,7 @@ ingress:
         - /
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 80
